--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx",
     "dev:https": "nodemon --exec \"npx tsx server-https.ts\" --watch server-https.ts --watch src --ext ts,tsx,js,jsx",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "NODE_ENV=production tsx server.ts",
     "lint": "next lint",
     "db:push": "prisma db push",
